Ajout de commentaires explicatifs dans les templates Twig

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,17 +1,23 @@
+{# Hérite du layout principal base.html.twig #}
 {% extends 'base.html.twig' %}
 
+{# Définit le titre de la page (remplace le block title du layout) #}
 {% block title %}Accueil{% endblock %}
 
+{# Contenu principal de la page #}
 {% block body %}
-<div style="margin: 50px; font-family: Arial, sans-serif;">
-    <h1>Bienvenue sur ma première page Symfony ! 🎉</h1>
-    
-    <p>Cette page est générée par le contrôleur : <strong>{{ controller_name }}</strong></p>
-    
-    <p>Pour modifier cette page :</p>
-    <ul>
-        <li>Contrôleur : <code>src/Controller/HomeController.php</code></li>
-        <li>Template : <code>templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+    <div class="mt-5 text-center">
+        {# Titre principal #}
+        <h1>Bienvenue sur ma première page Symfony ! 🎉</h1>
+        
+        {# Affiche le nom du contrôleur passé depuis HomeController #}
+        <p>Cette page est générée par le contrôleur : <strong>{{ controller_name }}</strong></p>
+        
+        {# Explications pour modifier la page #}
+        <p>Pour modifier cette page :</p>
+        <ul class="list-unstyled">
+            <li>Contrôleur : <code>src/Controller/HomeController.php</code></li>
+            <li>Template : <code>templates/home/index.html.twig</code></li>
+        </ul>
+    </div>
 {% endblock %}
