--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,8 +40,8 @@
                     {# Menu de navigation #}
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
-                            <li class="nav-item"><a class="nav-link" href="/home">Accueil</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">À propos</a></li>
+                            <li class="nav-item"><a class="nav-link {{ app.request.attributes.get('_route') == 'app_home' ? 'active' }}" href="/home">Accueil</a></li>
+                            <li class="nav-item"><a class="nav-link {{ app.request.attributes.get('_route') == 'app_about' ? 'active' }}" href="/about">À propos</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                         </ul>
                     </div>
