Divers ajustements et corrections

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,6 +18,7 @@
         <ul class="list-unstyled">
             <li>Contrôleur : <code>src/Controller/HomeController.php</code></li>
             <li>Template : <code>templates/home/index.html.twig</code></li>
+            <li>Nom passé en paramètre : <strong>{{ nom }}</strong></li>
         </ul>
     </div>
 {% endblock %}
