Mise à jour HomeController ou autres fichiers

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,6 +19,7 @@
             <li>Contrôleur : <code>src/Controller/HomeController.php</code></li>
             <li>Template : <code>templates/home/index.html.twig</code></li>
             <li>Nom passé en paramètre : <strong>{{ nom }}</strong></li>
+            <li>Prénom passé en paramètre : <strong>{{ prenom }}</strong></li>
         </ul>
     </div>
 {% endblock %}
