--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link {{ app.request.attributes.get('_route') == 'app_home' ? 'active' }}" href="/home">Accueil</a></li>
+                            <li class="nav-item"><a class="nav-link {{ app.request.attributes.get('_route') == 'app_blog' ? 'active' }}" href="/blog">Blog</a></li>
                             <li class="nav-item"><a class="nav-link {{ app.request.attributes.get('_route') == 'app_about' ? 'active' }}" href="/about">À propos</a></li>
                             <li class="nav-item"><a class="nav-link {{ app.request.attributes.get('_route') == 'app_contact' ? 'active' }}" href="/contact">Contact</a></li>
                         </ul>
