--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -9,7 +9,6 @@
     <div class="mt-5 text-center">
         <h1>Blog</h1>
         <p>Bienvenue sur le blog !</p>
-        <p>Contrôleur : <code>src/Controller/BlogController.php</code></p>
-        <p>Template : <code>templates/blog/index.html.twig</code></p>
+        <p>Liste des articles :</p>
     </div>
 {% endblock %}
