--- a/templates/blog/new.html.twig
+++ b/templates/blog/new.html.twig
@@ -5,10 +5,14 @@
 {% block body %}
     <div class="mt-5 text-center">
         <h1>Créer un nouvel article</h1>
-        <form class="mx-auto" style="max-width:400px;">
+        <form method="post" class="mx-auto" style="max-width:400px;">
             <div class="mb-3">
                 <label for="titre" class="form-label">Titre</label>
                 <input type="text" class="form-control" id="titre" placeholder="Titre de l'article">
+            </div>
+            <div class="mb-3">
+                <label for="categorie" class="form-label">Catégorie</label>
+                <input type="text" class="form-control" id="categorie" placeholder="Catégorie de l'article">
             </div>
             <div class="mb-3">
                 <label for="contenu" class="form-label">Contenu</label>
