--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     <div class="mt-5 text-center">
-        <h1>Article : {{ article_slug }}</h1>
-        <p>Ici s'affichera le contenu de l'article avec le slug <strong>{{ article_slug }}</strong>.</p>
+        <h1>voici l'article : {{ article_slug }}</h1>
+        <p>Contenu de l'article avec le slug <strong>{{ article_slug }}</strong>.</p>
         <a href="/blog" class="btn btn-secondary mt-3">Retour au blog</a>
     </div>
 {% endblock %}
