--- a/templates/blog/category.html.twig
+++ b/templates/blog/category.html.twig
@@ -5,7 +5,6 @@
 {% block body %}
     <div class="mt-5 text-center">
         <h1>Catégorie : {{ category }}</h1>
-        <p>Ici s'affichera la liste des articles de la catégorie <strong>{{ category }}</strong>.</p>
-        <a href="/blog" class="btn btn-secondary mt-3">Retour au blog</a>
+        <p>Voici la liste des articles de la catégorie <strong>{{ category }}</strong>.</p>
     </div>
 {% endblock %}
