--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -2,13 +2,14 @@
 {% extends 'base.html.twig' %}
 
 {# Titre de la page #}
-{% block title %}Blog{% endblock %}
+{% block title %}Blog
+{% endblock %}
 
 {# Contenu principal #}
 {% block body %}
-    <div class="mt-5 text-center">
-        <h1>Blog</h1>
-        <p>Bienvenue sur le blog !</p>
-        <p>Liste des articles :</p>
-    </div>
+	<div class="mt-5 text-center">
+		<h1>Blog</h1>
+		<p>Bienvenue sur le blog !</p>
+		<p>Liste des articles :</p>
+	</div>
 {% endblock %}
