--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -1,10 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Article {{ article_slug }}{% endblock %}
+{% block title %}Article
+	{{ article_slug }}
+{% endblock %}
 
 {% block body %}
-    <div class="mt-5 text-center">
-        <h1>Voici l'article : {{ article_slug }}</h1>
-        <p>Contenu de l'article avec le slug <strong>{{ article_slug }}</strong>.</p>
-    </div>
+	<div class="mt-5 text-center">
+		<h1>Voici l'article :
+			{{ article_slug }}</h1>
+		<p>Contenu de l'article avec le slug
+			<strong>{{ article_slug }}</strong>.</p>
+	</div>
 {% endblock %}
